--- a/gb/22/9/5/n13817493.md
+++ b/gb/22/9/5/n13817493.md
@@ -1,62 +1,51 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>苏慧伦开唱 嘉宾动力火车自嘲“腊肉”上阵</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/09/id13817529-2209042356221487-600x400.jpg" />
 <h6>2022年9月3日，苏慧伦（中）在高雄流行音乐中心开唱，邀请动力火车同台演出。（相信音乐提供）
 </h6>
 <hr>
-	<p>【大纪元2022年09月05日讯】（大纪元记者马维芬报导）<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%8B%8F%E6%85%A7%E4%BC%A6.md#1">苏慧伦</a>3日在高雄流行音乐中心开唱，当晚邀请了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A8%E5%8A%9B%E7%81%AB%E8%BD%A6.md#1">动力火车</a>、“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%BC%93%E9%BC%93.md#1">鼓鼓</a>”<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%90%95%E6%80%9D%E7%BA%AC.md#1">吕思纬</a>担任嘉宾。动力火车一上场即受到全场欢呼，让苏慧伦打趣说“嘉宾要慎选”，动力火车则自嘲已是“腊肉”不是鲜肉，逗笑全场。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%8B%8F%E6%85%A7%E4%BC%A6.md#1">苏慧伦</a>当日先以《929》、《黄色月亮》《鸭子》等歌曲开场，并要全场歌迷回忆起当初的那个小男孩、小女孩，她说：“今天没有让你们保护喉咙的意思，是不是很久没唱KTV，今天就是要一起唱”，随后又带来多首经典。</p>
-<figure id="attachment_13817532" aria-describedby="caption-attachment-13817532" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13817532-2209042356201487.jpg"><img class="size-large wp-image-13817532" title="AR5L2382" src="https://i.epochtimes.com/assets/uploads/2022/09/id13817532-2209042356201487-600x400.jpg" alt="AR5L2382" width="600" b="400" /></a><figcaption id="caption-attachment-13817532" class="wp-caption-text">2022年9月3日，苏慧伦在高雄流行音乐中心开唱，特别选唱多首歌迷留言点的歌。（相信音乐提供）</figcaption></figure>
-<p>这次演唱会由嘉宾“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%BC%93%E9%BC%93.md#1">鼓鼓</a>”<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%90%95%E6%80%9D%E7%BA%AC.md#1">吕思纬</a>率先登场，与苏慧伦一连对唱了《嗯哼》、《ok?ok!》、《Happy Hours》，苏慧伦还小秀一下鼓技。 她表示，“本来很紧张想说干嘛自己找麻烦，没想到第一次练习就上手。”但其实她压力大到失眠，事前还找了乐手老师讨教一番。</p>
-<figure id="attachment_13817530" aria-describedby="caption-attachment-13817530" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13817530-2209042356251487.jpg"><img class="size-large wp-image-13817530" title="AR5L1620" src="https://i.epochtimes.com/assets/uploads/2022/09/id13817530-2209042356251487-600x400.jpg" alt="AR5L1620" width="600" b="400" /></a><figcaption id="caption-attachment-13817530" class="wp-caption-text">2022年9月3日，苏慧伦在高雄流行音乐中心开唱，为给歌迷惊喜学打鼓。（相信音乐提供）</figcaption></figure>
-<p>另一组嘉宾则是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8A%A8%E5%8A%9B%E7%81%AB%E8%BD%A6.md#1">动力火车</a>，一出场就迎来全场的尖叫声，苏慧伦更假装吃味地说：“请嘉宾要慎选，你们尖叫声超夸张！”这让紧接着鼓鼓出场的动力火车笑回：“刚已经有‘鲜肉’，所以要换‘腊肉’。”苏慧伦还与动力火车合唱《我很好骗》、《爱你让我勇敢》。</p>
-<figure id="attachment_13817531" aria-describedby="caption-attachment-13817531" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13817531-2209042356271487.jpg"><img class="size-large wp-image-13817531" title="" src="https://i.epochtimes.com/assets/uploads/2022/09/id13817531-2209042356271487-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13817531" class="wp-caption-text">2022年9月3日，苏慧伦（左）在高雄流行音乐中心开唱，邀请动力火车同台演出。（相信音乐提供）</figcaption></figure>
+	<p>【大纪元2022年09月05日讯】（大纪元记者马维芬报导）苏慧伦3日在高雄流行音乐中心开唱，当晚邀请了动力火车、“鼓鼓”吕思纬担任嘉宾。动力火车一上场即受到全场欢呼，让苏慧伦打趣说“嘉宾要慎选”，动力火车则自嘲已是“腊肉”不是鲜肉，逗笑全场。</p>
+<p>苏慧伦当日先以《929》、《黄色月亮》《鸭子》等歌曲开场，并要全场歌迷回忆起当初的那个小男孩、小女孩，她说：“今天没有让你们保护喉咙的意思，是不是很久没唱KTV，今天就是要一起唱”，随后又带来多首经典。</p>
+<figure id="attachment_13817532" aria-describedby="caption-attachment-13817532" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13817532-2209042356201487.jpg"><img decoding="async" class="size-large wp-image-13817532" title="AR5L2382" src="https://i.epochtimes.com/assets/uploads/2022/09/id13817532-2209042356201487-600x400.jpg" alt="AR5L2382" width="600" b="400" /></a><figcaption id="caption-attachment-13817532" class="wp-caption-text">2022年9月3日，苏慧伦在高雄流行音乐中心开唱，特别选唱多首歌迷留言点的歌。（相信音乐提供）</figcaption></figure>
+<p>这次演唱会由嘉宾“鼓鼓”吕思纬率先登场，与苏慧伦一连对唱了《嗯哼》、《ok?ok!》、《Happy Hours》，苏慧伦还小秀一下鼓技。 她表示，“本来很紧张想说干嘛自己找麻烦，没想到第一次练习就上手。”但其实她压力大到失眠，事前还找了乐手老师讨教一番。</p>
+<figure id="attachment_13817530" aria-describedby="caption-attachment-13817530" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13817530-2209042356251487.jpg"><img decoding="async" class="size-large wp-image-13817530" title="AR5L1620" src="https://i.epochtimes.com/assets/uploads/2022/09/id13817530-2209042356251487-600x400.jpg" alt="AR5L1620" width="600" b="400" /></a><figcaption id="caption-attachment-13817530" class="wp-caption-text">2022年9月3日，苏慧伦在高雄流行音乐中心开唱，为给歌迷惊喜学打鼓。（相信音乐提供）</figcaption></figure>
+<p>另一组嘉宾则是动力火车，一出场就迎来全场的尖叫声，苏慧伦更假装吃味地说：“请嘉宾要慎选，你们尖叫声超夸张！”这让紧接着鼓鼓出场的动力火车笑回：“刚已经有‘鲜肉’，所以要换‘腊肉’。”苏慧伦还与动力火车合唱《我很好骗》、《爱你让我勇敢》。</p>
+<figure id="attachment_13817531" aria-describedby="caption-attachment-13817531" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13817531-2209042356271487.jpg"><img decoding="async" class="size-large wp-image-13817531" title="" src="https://i.epochtimes.com/assets/uploads/2022/09/id13817531-2209042356271487-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13817531" class="wp-caption-text">2022年9月3日，苏慧伦（左）在高雄流行音乐中心开唱，邀请动力火车同台演出。（相信音乐提供）</figcaption></figure>
 <p>这次三人不约而同穿着夏日亮丽色系的衣服，笑称干脆原地组团。</p>
 <p>在这场久违的聚会里，苏慧伦演唱铁粉许愿曲目《想去旅行》、《没有去过的地方》、《相见恨晚》，包含五月天玛莎指定歌曲《相爱吧河光与月光》，在安可环节，准备了闽南语《非常女》、《追追追》。</p>
-<figure id="attachment_13817533" aria-describedby="caption-attachment-13817533" style="width: 453px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13817533-2209042357591487.jpg"><img class=" wp-image-13817533" title="AR5L2592" src="https://i.epochtimes.com/assets/uploads/2022/09/id13817533-2209042357591487.jpg" alt="AR5L2592" width="453" b="678" /></a><figcaption id="caption-attachment-13817533" class="wp-caption-text">2022年9月3日，苏慧伦在高雄流行音乐中心开唱。（相信音乐提供）</figcaption></figure>
+<figure id="attachment_13817533" aria-describedby="caption-attachment-13817533" style="width: 453px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2022/09/id13817533-2209042357591487.jpg"><img decoding="async" class=" wp-image-13817533" title="AR5L2592" src="https://i.epochtimes.com/assets/uploads/2022/09/id13817533-2209042357591487.jpg" alt="AR5L2592" width="453" b="678" /></a><figcaption id="caption-attachment-13817533" class="wp-caption-text">2022年9月3日，苏慧伦在高雄流行音乐中心开唱。（相信音乐提供）</figcaption></figure>
 <p>责任编辑：苏漾</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/7/15/n13090314.md#1">疫情下手术延宕 苏慧伦声援颅颜儿与其家庭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/10/27/n13332629.md#1">艾怡良事业3喜讯 苏慧伦站台献纾压特调</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/11/24/n13395752.md#1">苏慧伦领军同门歌手“做好事” 齐为公益而唱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/12/31/n13472898.md#1">跨年演唱被摄影机撞到 苏慧伦一度蹲下摸头</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/7/15/n13090314.md#1">疫情下手术延宕 苏慧伦声援颅颜儿与其家庭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/10/27/n13332629.md#1">艾怡良事业3喜讯 苏慧伦站台献纾压特调</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/11/24/n13395752.md#1">苏慧伦领军同门歌手“做好事” 齐为公益而唱</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/12/31/n13472898.md#1">跨年演唱被摄影机撞到 苏慧伦一度蹲下摸头</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/9/n10470479.md#1" target="_blank">林辉：写信赞成毛退位的陈铭枢之结局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/22/n11674273.md#1" target="_blank">身心俱悴时喜遇大法 印度母亲人生现转机</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/17/n10569800.md#1" target="_blank">刘晓：中共效仿纳粹大规模焚书 结局相同</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/14/n11521196.md#1" target="_blank">美重量级参议员 要求中共停止迫害法轮功</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/27/n13893016.md#1">《推背图》预言江泽民死亡和其后瘟疫惨象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/23/n13890728.md#1">【百年真相】十万人命当儿戏 中共大规模杀人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/26/n13891849.md#1">【未解之谜】预言家珍妮之一 肯尼迪家族的“诅咒”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/24/n13891107.md#1">出生七年才说话 轮回转生为一人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/20/n13888243.md#1">【爱丽话五千】五千年前的腊八和今天有什么不一样</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895678.md#1">【环球直击】网易视频盘点真实2022 遭下架</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896430.md#1">【十字路口】传中共放“阳”出国 让大疫重演？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896087.md#1">【晚间新闻】方舱惊变停尸房 中南海瞒死亡人数</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895524.md#1">2022年10条获奖微信 最惊怵的话是什么？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894594.md#1">中共歼11在南海逼近美侦察机 相距不到3米</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895124.md#1">北京女子投诉录音曝光：医院尸体摞着堆放</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13894733.md#1">黄安曝中国殡仪馆火化大排长龙 网民诉惨状</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13895820.md#1">周晓涵要求打戏来真的 曝陈亚兰不照剧本演</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895784.md#1">弥补获奖感言遗憾 汤唯隔空感谢丈夫和女儿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896444.md#1">李钟硕与IU公开恋情 已交往4个多月</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894649.md#1">杨幂参股公司被爆欠债亿元 公司官方微博回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894250.md#1">美国73岁男子以喷射客机为家 实现年少梦想</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895183.md#1">在游轮上度假如何省钱？ 专家这么说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893675.md#1">尿频影响睡眠 3种常见夜尿症及治疗方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894434.md#1">含维生素K1的绿叶蔬菜可降低晚年骨折风险</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893668.md#1">让厨房台面焕然一新 简单又省钱的布置技巧</a></li>
-<hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/9/5/n13817493.htm">苏慧伦开唱 嘉宾动力火车自嘲“腊肉”上阵</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/9/5/n13817493.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418304.md#1">【未解之谜】2025预言盘点——中国篇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418708.md#1">台故宫推筑城风云特展 看台湾独特筑城故事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421709.md#1">【未解之谜】皮行者牧场（二）：神秘的隐形人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/1/n14403677.md#1">善恶有报：泯没良心 恶妇当下变动物</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/5/n14406436.md#1">古代的人是如何过年的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421729.md#1">【车评】本田首部电车 2025 Honda Prologue Elite</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421721.md#1">【军事情报局】中共所谓六代机是真六代机吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421249.md#1">【新闻大家谈】川普达沃斯讲话：习主动致电</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420914.md#1">台湾茶叶大使许正龙的“泡茶密码”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420923.md#1">夏洛山：建全球最大填海机场 中共做赔本买卖？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421046.md#1">北京推保险资金入市 专家吁股民加紧逃离</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420977.md#1">王宝强加入周润发跑友圈 为角色成功减重30斤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420918.md#1">刘晓庆：不知自己真实年龄 感觉自己适合属虎</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421651.md#1">遭封杀3年 邓伦不露脸不具名拍杂志试水复出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420870.md#1">奥斯卡入围名单揭晓 《璀璨女人梦》成大赢家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421683.md#1">港星薛凯琪至今没出嫁 直呼TVB多少要负点责</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421953.md#1">世界最短电扶梯在日本 只有5阶</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421359.md#1">为什么航空公司租轮胎给飞机使用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421775.md#1">吃草饲牛肉或榖饲牛肉 哪种更健康？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418374.md#1">头发越来越少怎么办？3茶饮5穴位养发</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416125.md#1">有备无患 日本家庭避难包必备这些物资</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/9/5/n13817493.htm">苏慧伦开唱 嘉宾动力火车自嘲“腊肉”上阵</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/9/5/n13817493.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
